# medecinevibe

./: .gitignore  Cargo.toml
data/: donnees_medicales_enrichies2.csv
src/: data_loader.rs  handlers.rs  main.rs  models.rs  stats.rs
static/: about.html  ads.txt  button.html  index.html  legal.html  methods.html  privacy.html  sitemap.xml  terms.html
