[package]
name = "medecinevibe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
once_cell = "1.19"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
serde_json = "1.0"